changed bootstrap links to cdn

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
 
     <!-- Bootstrap link -->
-    <link rel="stylesheet" href="file:///home/simon/Desktop/web%20development/bootstrap-5.0.0-beta2-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <!-- External css link -->
     <link rel="stylesheet" href="css/main.css">
@@ -331,8 +331,8 @@
 
 
     <!-- Additional bootstrap js and jquery links -->
-    <script type="text/javascript" src="file:///home/simon/Desktop/web%20development/bootstrap-5/jquery/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="file:///home/simon/Desktop/web%20development/bootstrap-5.0.0-beta2-dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
 </body>
 
